# raylib-c-screen-tearing-test

./: CMakeLists.txt  README.md
src/: main.c
